--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,10 @@
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,initial-scale=1.0" name="viewport"/>
     <!-- to force multi-engine browser(like 360/liebao) to use webkit-->
     <meta name="renderer" content="webkit">
-    <meta content="闲来吾室" name="keywords"/>
+    <meta content="Reactive Web Starter" name="keywords"/>
     <meta content="kiliwalk" name="author"/>
-    <meta name="MobileOptimized" content="320"><!-- 一般逻辑分辨率都是320 -->
 
-    <title>闲来吾室后台管理系统</title>
+    <title>Reactive Web Starter</title>
   </head>
   <body>
     <div id="app"></div>
